--- a/transactions_zh.asciidoc
+++ b/transactions_zh.asciidoc
@@ -48,7 +48,7 @@ nonce值也用于防止帐户余额的错误计算。例如，假设一个账户
 使用nonce确保所有节点计算出相同的余额，并正确地对交易进行排序，相当于防止比特币中的“双重支出”的机制。但是，因为以太坊追踪账户余额并且不会单独追踪硬币（在比特币中称为UTXO），所以只有在账户余额计算错误时才会发生“双重支出”。nonce机制可以防止这种情况发生。
 
 [[tracking_nonce]]
-====+ 跟踪nonce
+===== 跟踪nonce
 
 实际上，nonce是源自帐户的已*确认*（已挖矿）交易数的最新计数。要找到nonce是多少，您可以询问区块链，例如通过web3界面：
 
