--- a/transactions_zh.asciidoc
+++ b/transactions_zh.asciidoc
@@ -60,7 +60,7 @@ web3.eth.getTransactionCount("0x9e713963a92c02317a681b9bb3065a8249de124f")
 40
 ----
 
-[Tip]
+[TIP]
 ====
 nonce是一个从零起始的计数器，意味着第一个交易具有nonce 0。在<<nonce_getTransactionCount>>中，我们有一个40的交易计数，表示0到39的nonce已被查看。下一个交易的nonce将是40。 
 ====
@@ -148,7 +148,7 @@ https://ethgasstation.info/
 
 钱包可以调整他们发起的交易中的gasPrice，从而更快地确认（挖矿）交易。gasPrice越高，交易可能确认的速度越快。相反，较低优先级的交易可能会降低他们愿意为燃料支付的价格，导致确认速度减慢。可以设置的最低gasPrice为零，这意味着免费的交易。在大块空间需求低的时期，这些交易将被确认。
 
-[Tip]
+[TIP]
 ====
 最低可接受的gasPrice为零。这意味着钱包可以产生完全免费的交易。根据能力的不同，这些可能永远不会被确认，但协议中没有任何内容禁止免费交易。您可以在以太坊区块链中找到几个此类交易成功确认的例子。
 ====
