--- a/transactions_zh.asciidoc
+++ b/transactions_zh.asciidoc
@@ -134,7 +134,7 @@ curl --data '{"method":"parity_nextNonce","params":["0x9e713963a92c02317a681b9bb
 [[tx_gas]]
 === 交易燃料
 
-我们在<<gas>>中详细讨论*燃料*。但是，让我们介绍一些交易中gasPrice和startGas组件角色的基本知识。
+我们在<<gas>>中详细讨论 _燃料_。但是，让我们介绍一些交易中gasPrice和startGas组件角色的基本知识。
 
 gas是以太坊的燃料。燃料不是以太币 - 它是一个独立的虚拟货币，汇率参照以太币。以太坊使用燃料来控制交易可以花费的资源量，因为它将在全球数千台计算机上处理。开放式（图灵完整）计算模型需要某种形式的计量，以避免拒绝服务攻击或无意中的资源耗尽交易。
 
