--- a/transactions_zh.asciidoc
+++ b/transactions_zh.asciidoc
@@ -368,7 +368,7 @@ TODO添加示例，显示在web3控制台和etherscan中
 
 以太坊使用的数字签名算法是 _椭圆曲线数字签名算法_ （简称 _ECDSA_ ）。ECDSA是用于基于椭圆曲线私钥/公钥对的数字签名的算法，如<<elliptic_curve>>中所述。
 
-数字签名在以太坊有三个用途（请参阅下面的侧边栏）。首先，签名证明私钥的所有者，暗示着以太坊账户的所有者，已经*授权*了以太币的花费或执行合约。其次，授权证明是 _不可否认的_ （non-repudiation）。第三，签名证明交易数据在交易签署后没有， _也不能被任何人修改_ 。
+数字签名在以太坊有三个用途（请参阅下面的侧边栏）。首先，签名证明私钥的所有者，暗示着以太坊账户的所有者，已经 _授权_ 了以太币的花费或执行合约。其次，授权证明是 _不可否认的_ （non-repudiation）。第三，签名证明交易数据在交易签署后没有， _也不能被任何人修改_ 。
 
 [[digital_signature_definition]]
 .维基百科对“数字签名”的定义
