--- a/dev-tools_zh.asciidoc
+++ b/dev-tools_zh.asciidoc
@@ -395,7 +395,7 @@ Options:
 
 https://dapp.tools/
 
-安装:
+Installing:
 ----
 $ curl https://nixos.org/nix/install | sh
 $ nix-channel --add https://nix.dapphub.com/pkgs/dapphub
